--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 .Container {
+    position: relative;
     display: flex;
     height: 500px;
     width: 400px;
@@ -24,6 +25,7 @@ body {
     box-shadow: 0 10px 20px 10px rgb(0, 0, 0, 0.5);
     border-radius: 12px;
     background-color: white;
+    overflow: hidden;
     transition: all 0.5s ease-in-out;
 }
 
@@ -34,6 +36,7 @@ body {
     justify-content: space-evenly;
     width: 100%;
     height: 100%;
+    transition: all 0.5s ease-in-out;
 }
 
 .startBtn {
@@ -46,6 +49,15 @@ body {
     transition: 0.5s ease-in-out;
 }
 
+.startBtn:active {
+    transform: scale(0.9);
+}
+
+.startBtn:hover {
+    transform: scale(1.1);
+}
+
+
 .startingPage .Logo {
     height: 25%;
     width: 40%;
@@ -55,13 +67,15 @@ body {
 }
 
 .categorySelection {
-    display: none;
+    position: absolute;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
     height: 100%;
-    border: 1px solid;
+    transition: 0.5s ease-in-out;
+    transform: translateY(-100%);
 }
 
 .categorySelection div {
@@ -84,27 +98,29 @@ body {
     display: none;
 }
 
-.Active:active {
-    transform: scale(0.9);
-}
-
-.Active:hover {
-    transform: scale(1.1);
-}
-
 .quizPage, .ResultPage {
-    display: none;
+    position: absolute;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
     height: 100%;
-    border: 1px solid;
     border-radius: 12px;
+    transition: 0.5s ease-in-out;
+}
+
+.quizPage {
+    transform: translateX(100%);
+}
+
+.ResultPage {
+    transform: translateX(-100%);
 }
 
 .quizPage .Question {
     font-weight: 700;
+    text-align: center;
 }
 
 .quizPage .Options {
