- added : a indicator for right and wrong answer

--- a/style.css
+++ b/style.css
@@ -150,5 +150,13 @@ body {
 /* Javascript Classes */
 
 .selected {
+    border: 4px solid lightskyblue;
+}
+
+.correctAnswer {
     border: 4px solid lightgreen;
+}
+
+.wrongAnswer {
+    border: 4px solid tomato;
 }
