--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --clr--text--color: white;
 }
 
-@media  only screen and (max-width: 500){
+@media  screen and (max-width: 500px){
     .Container {
         transform: scale(0.85);
     }
@@ -70,6 +70,7 @@ body {
     background-image: url(./Assets/Logo.jpg);
     background-size: contain;
     background-repeat: no-repeat;
+    transform: scale(1.5)
 }
 
 .categorySelection {
@@ -151,6 +152,31 @@ body {
 
 .quizPage .startBtn {
     border: 1px solid;
+}
+
+.questionCounter {
+  position: absolute;
+  top: 10%;
+  letter-spacing: 2px;
+  color: white;
+}
+
+.progress-bar {
+  position: absolute;
+  top: 15%;
+  width: 100px;
+  height: 20px;
+  border-radius: 50px;
+  border: 1px solid;
+  background-color: white;
+}
+
+.bar {
+  height: 100%;
+  width: 25%;
+  border-radius: 50px;
+  background-color: greenyellow;
+  transition: all 0.5s ease;
 }
 
 /* Javascript Classes */
